# EEG-ML-Project

./: .gitignore  LICENSE  README.md  pyproject.toml
first_pipeline/: explore_patient.py  patient_inventory.py  setup_environment.py
