[project]
name = "eeg-ml-project"
version = "0.1.0"
description = "Predictive system based on ML for neurological prognosis post-cardiac arrest using EEG signals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mne>=1.11.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]


[project.license]
text = "MIT"

[[project.authors]]

name = "Manuel Pacheco"
email = "manuelfpg012@gmail.com"
